fix radio & checkbox vertical alignment.

--- a/admin/src/scss/_forms.scss
+++ b/admin/src/scss/_forms.scss
@@ -22,7 +22,14 @@ textarea {
   line-height: 1.5;
 }
 
-input[type="radio"], input[type="checkbox"] { margin-right: 3px; }
+input[type="radio"], input[type="checkbox"] {
+  margin-right: 3px;
+}
+
+input[type="radio"], input[type="checkbox"],
+input[type="radio"] + label, input[type="checkbox"] + label {
+  vertical-align: middle;
+}
 
 input, textarea {
   &.text-s { padding: 5px; }
